@@ -23,6 +23,11 @@ action_format = $(action)8s $(name)s {$(alias)s}
 # The default sort order
 sort_fields = name,alias
 
+# A list of callables that get called AFTER config is successfully loaded
+config_validator_callbacks = pyrocore.torrent.engine:TorrentProxy.add_custom_fields
+
+# A list of callables that return an iterable of FieldDefinition objects
+custom_field_factories = 
 
 [ANNOUNCE]
 # Add alias names for announce URLs to this section; those aliases are used
