@@ -3,6 +3,8 @@ pyroscope (0.3.4) hardy; urgency=low
   * chtor: --comment, --bump-date, and --no-date added
   * chtor: dropped --force, and replaced it by --reannounce-all
   * chtor: takes alias names for announe URLs now
+  * rtcontrol: added machinery to allow custom field definitions
+  * rtcontrol: --help-fields added
 
  -- pyroscope <pyroscope.project@gmail.com>  Sat, 20 Mar 2010 03:30:48 +0100
 
